[package]
name = "merkle_extension"
version = "0.1.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"

[dependencies]
pallet-merkle = "3.0.0"
ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }
scale = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }

# Should be removed once bitvecto-rs/bitvec#105 is resolved
funty = "=1.1.0"
webb-bulletproofs = "2.0.0"
sp-runtime = "3.0.0"
frame-system = "3.0.0"
frame-support = "3.0.0"
#parity-scale-codec = { version = "2.0.1", default-features = false }

[lib]
name = "merkle_extension"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
